examples/failing/TypeSynonyms5.purs
module Main where

import Prelude

type T = T
